# filess

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: release-macos.yml  release-windows.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src-tauri/src/services/: mod.rs  orchestrator.rs  sidecar.rs  storage.rs
apps/desktop/src-tauri/src/state/: mod.rs
apps/desktop/src/components/: ActivitySidebar.tsx  AppFooter.tsx  CommandPalette.tsx  HeroDropZone.tsx  IconRail.tsx  ProcessingCard.tsx  PromptModal.tsx  QuickConfigBar.tsx  ResultList.tsx  ReviewModal.tsx  SectionCard.tsx  SettingsDrawer.tsx  Sidebar.tsx  StatsBar.tsx
dev_docs/: 00_readme.md  01_product_contract.md  02_system_architecture.md  03_data_model.md  04_api_contracts.md  05_ui_spec.md  06_delivery_rules.md  development_plan.md  user_guide.md
scripts/: bundle_python.ps1  bundle_python_macos.sh  release.bat  release.ps1
services/sidecar/: pyproject.toml
services/sidecar/src/sidecar/: main.py
services/sidecar/src/sidecar/adapters/: __init__.py  siliconflow.py
services/sidecar/src/sidecar/models/: contracts.py
services/sidecar/src/sidecar/rpc/: dispatcher.py
services/sidecar/tests/: test_dispatcher.py
(+13 files in other folders)
