[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-file-organizer-sidecar"
version = "0.1.0"
description = "Python sidecar for parsing, retrieval and cloud model orchestration"
license = { text = "PolyForm Noncommercial License 1.0.0" }
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

