[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"
license-file = "../../../LICENSE"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
trash = "5"
dirs = "5"

